# curate-draw

./: README.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.claude/skills/release-pipeline/: SKILL.md
.github/workflows/: release.yml
curate-draw/: package-lock.json
src/: App.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: ScreenshotAnnotator.tsx
